--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 <body class="bg-light">
 
