--- a/Fridge.html
+++ b/Fridge.html
@@ -11,32 +11,42 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark border-bottom" style="background-color:#fe5a5a;">
-        <div class="container">
-            <!-- Brand: image replaces text; hidden text kept for accessibility -->
-            <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="images/logo.png"
-                alt="FridgeMate"
-                width="140" height="55"
-                class="d-inline-block align-text-top me-2">
+    <div class="container">
+        <!-- Brand + links next to logo -->
+        <div class="d-flex align-items-center gap-4">
+        <!-- Brand (image) -->
+        <a class="navbar-brand d-flex align-items-center" href="/">
+            <img src="images/logo.png" alt="FridgeMate" width="140" height="55" class="d-inline-block align-text-top">
             <span class="visually-hidden">FridgeMate</span>
-            </a>
+        </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
-                    aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav ms-auto align-items-lg-center">
-                <li class="nav-item me-2">
-                <a class="btn btn-outline-light" href="#signin">Sign in</a>
-                </li>
-                <li class="nav-item">
-                <a class="btn btn-light" href="#signup">Sign up</a>
-                </li>
-            </ul>
-            </div>
+        <!-- Text links next to the logo -->
+        <ul class="navbar-nav flex-row align-items-center">
+            <li class="nav-item">
+            <a class="nav-link px-2 text-white" href="/index.html" aria-current="page">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link px-2 text-white" href="/FridgeList.html">My Fridges</a>
+            </li>
+        </ul>
         </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+                aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto align-items-lg-center">
+            <li class="nav-item me-2">
+            <a class="btn btn-outline-light" href="#signin">Sign in</a>
+            </li>
+            <li class="nav-item">
+            <a class="btn btn-light" href="#signup">Sign up</a>
+            </li>
+        </ul>
+        </div>
+    </div>
     </nav>
 
     <div class="container py-4">
@@ -213,58 +223,6 @@
     <!-- Bootstrap JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Minimal JS to wire file inputs and dynamic labels -->
-    <script>
-      // fridge photo
-      const fridgeCameraBtn = document.getElementById('fridgeCameraBtn');
-      const fridgePhoto = document.getElementById('fridgePhoto');
-      fridgeCameraBtn.addEventListener('click', () => fridgePhoto.click());
-
-      // barcode file
-      const barcodeCameraBtn = document.getElementById('barcodeCameraBtn');
-      const barcodeFile = document.getElementById('barcodeFile');
-      const barcodeFileName = document.getElementById('barcodeFileName');
-
-      barcodeCameraBtn.addEventListener('click', () => barcodeFile.click());
-
-      barcodeFile.addEventListener('change', (e) => {
-        const f = e.target.files[0];
-        barcodeFileName.textContent = f ? f.name : 'No file chosen';
-      });
-
-      // Update 'Add to Database & Fridge' button text when quantity changes on fridge form
-      const fridgeQty = document.getElementById('fridgeQuantity');
-      const dbAddAndFridgeBtn = document.getElementById('dbAddAndFridge');
-
-      const updateDbAddLabel = () => {
-        const val = (fridgeQty && fridgeQty.value) ? parseInt(fridgeQty.value, 10) : 1;
-        const safe = (Number.isInteger(val) && val > 0) ? val : 1;
-        dbAddAndFridgeBtn.textContent = `Add to Database & Fridge (qt: ${safe})`;
-      };
-
-      if (fridgeQty) {
-        fridgeQty.addEventListener('input', updateDbAddLabel);
-        updateDbAddLabel();
-      }
-
-      // Basic form submit prevention (replace with real submit logic)
-      document.getElementById('fridgeForm').addEventListener('submit', (e) => {
-        e.preventDefault();
-        alert('Add to Fridge submitted — wire this to your backend.');
-      });
-
-      document.getElementById('dbForm').addEventListener('submit', (e) => {
-        e.preventDefault();
-        alert('Add to Database submitted — wire this to your backend.');
-      });
-
-      document.getElementById('dbAddAndFridge').addEventListener('click', () => {
-        alert('Add to Database & Fridge clicked — wire this to your backend.');
-      });
-
-      document.getElementById('viewDbItems').addEventListener('click', () => {
-        alert('View all Database Items — implement navigation to DB list.');
-      });
-    </script>
+    <script src="Fridge.js"></script>
   </body>
 </html>
