--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In — FridgeMate</title>
+    <title>Sign Up — FridgeMate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body class="bg-light d-flex align-items-center" style="height: 100vh;">
@@ -12,20 +12,20 @@
         <div class="col-md-6">
           <div class="card shadow-sm">
             <div class="card-body p-4">
-              <h2 class="fw-bold mb-3 text-center">Sign in to FridgeMate</h2>
-              <p class="text-muted text-center mb-4">Welcome back! Access your shared fridges.</p>
+              <h2 class="fw-bold mb-3 text-center">Create your FridgeMate account</h2>
+              <p class="text-muted text-center mb-4">Manage shared fridges, track items, and reduce waste.</p>
               <div id="loadingDiv" class="text-center" style="display: none;">
                 <div class="spinner-border text-primary" role="status">
                   <span class="visually-hidden">Loading...</span>
                 </div>
                 <p class="mt-2">Processing authentication...</p>
               </div>
-              <div id="signinDiv">
+              <div id="signupDiv">
                 <div class="d-grid mb-3">
-                  <button id="signinBtn" class="btn btn-primary btn-lg">Sign In</button>
+                  <button id="signupBtn" class="btn btn-primary btn-lg">Sign Up</button>
                 </div>
-                <p class="text-center small mt-3">Don't have an account?
-                  <a href="/signup.html">Sign up</a>
+                <p class="text-center small mt-3">Already have an account?
+                  <a href="/signin.html">Sign in</a>
                 </p>
               </div>
               <div id="errorDiv" class="alert alert-danger" style="display: none;"></div>
@@ -34,6 +34,6 @@
         </div>
       </div>
     </div>
-    <script src="signin.js" type="module"></script>
+    <script src="signup.js" type="module"></script>
   </body>
 </html>
