--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark border-bottom" style="background-color:#fe5a5a;">
     <div class="container">
-        <!-- Brand + links next to logo -->
         <div class="d-flex align-items-center gap-4">
-        <!-- Brand (image) -->
         <a class="navbar-brand d-flex align-items-center" href="/">
             <img src="images/logo.png" alt="FridgeMate" width="140" height="55" class="d-inline-block align-text-top">
             <span class="visually-hidden">FridgeMate</span>
         </a>
 
-        <!-- Text links next to the logo -->
         <ul class="navbar-nav flex-row align-items-center">
             <li class="nav-item">
             <a class="nav-link px-2 text-white" href="/index.html" aria-current="page">Home</a>
@@ -39,13 +36,15 @@
         <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- auth area: script will update this based on auth state -->
         <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto align-items-lg-center">
+        <ul id="authArea" class="navbar-nav ms-auto align-items-lg-center">
+            <!-- fallback (no-JS) or initial state: signed-out buttons -->
             <li class="nav-item me-2">
-            <a class="btn btn-outline-light" href="#signin">Sign in</a>
+            <a class="btn btn-outline-light" href="/signin.html">Sign in</a>
             </li>
             <li class="nav-item">
-            <a class="btn btn-light" href="#signup">Sign up</a>
+            <a class="btn btn-light" href="/signup.html">Sign up</a>
             </li>
         </ul>
         </div>
@@ -61,8 +60,8 @@
       </p>
 
       <div class="d-flex justify-content-center gap-3">
-        <a id="signup" class="btn btn-light btn-lg fw-semibold" href="#">Get started — Sign up</a>
-        <a id="signin" class="btn btn-outline-light btn-lg" href="#">Sign in</a>
+        <a id="signup" class="btn btn-light btn-lg fw-semibold" href="signup.html">Get started — Sign up</a>
+        <a id="signin" class="btn btn-outline-light btn-lg" href="signin.html">Sign in</a>
       </div>
     </div>
   </header>
@@ -231,5 +230,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-ltrjvnR4/J57n3U6K7Z2q7N3a6l4E1fQxPjB5u3N5Kfyzq7q8k2m1qQ7f6k9Y1NQ"
           crossorigin="anonymous"></script>
+  <script src="index.js" type="module"></script>
 </body>
 </html>
